@@ -1,7 +1,9 @@
 package com.example.restaurant_management.service.impl;
 
 import com.example.restaurant_management.entity.Order;
+import com.example.restaurant_management.entity.Transaction;
 import com.example.restaurant_management.repository.OrderRepository;
+import com.example.restaurant_management.repository.TransactionRepository;
 import com.example.restaurant_management.service.ReportService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -17,29 +19,31 @@ import java.util.stream.Collectors;
 @Service
 public class ReportServiceImpl implements ReportService {
 
+    private final TransactionRepository transactionRepository;
     private final OrderRepository orderRepository;
 
-    @Autowired
-    private JdbcTemplate jdbcTemplate;
-
-    public ReportServiceImpl(OrderRepository orderRepository) {
+    public ReportServiceImpl(TransactionRepository transactionRepository, OrderRepository orderRepository) {
+        this.transactionRepository = transactionRepository;
         this.orderRepository = orderRepository;
     }
 
     @Override
     public Map<String, Object> getDailyReport(LocalDateTime start, LocalDateTime end) {
-        Double totalRevenue = orderRepository.sumTotalAmountBetween(start, end);
-        Long totalOrders = orderRepository.countOrdersBetween(start, end);
-        Double avgOrderValue = orderRepository.avgOrderValueBetween(start, end);
-        Long customerVisits = orderRepository.countDistinctCustomerBetween(start, end);
+
+        Double totalRevenue = transactionRepository.sumTotalAmountBetween(start, end);
+        Long totalOrders = transactionRepository.countOrdersBetween(start, end);
+        Double avgOrderValue = transactionRepository.avgOrderValueBetween(start, end);
+        Long customerVisits = transactionRepository.countDistinctCustomerBetween(start, end);
 
         Map<String, Object> report = new HashMap<>();
         report.put("totalRevenue", totalRevenue != null ? totalRevenue : 0.0);
         report.put("totalOrders", totalOrders != null ? totalOrders : 0);
         report.put("avgOrderValue", avgOrderValue != null ? avgOrderValue : 0.0);
         report.put("customerVisits", customerVisits != null ? customerVisits : 0);
+
         return report;
     }
+
 
     @Override
     public Map<String, Object> getTopItems() {
@@ -80,68 +84,77 @@ public class ReportServiceImpl implements ReportService {
         LocalDateTime end = LocalDateTime.now();
         LocalDateTime start = end.minusDays(6).withHour(0).withMinute(0).withSecond(0).withNano(0);
 
-        List<Object[]> rows = orderRepository.revenueByDayBetween(start, end);
+        List<Object[]> rows = transactionRepository.revenueByDayBetween(start, end);
+
         return rows.stream().map(r -> {
             Map<String, Object> m = new HashMap<>();
-            m.put("day", r[0]);               // java.sql.Date / String tùy driver
+            m.put("day", r[0]);
             m.put("revenue", ((Number) r[1]).doubleValue());
-            m.put("orders",  ((Number) r[2]).longValue());
+            m.put("orders", ((Number) r[2]).longValue());
             return m;
         }).toList();
     }
+
 
     @Override
     public List<Map<String, Object>> getTopItemsLast7Days() {
         LocalDateTime end = LocalDateTime.now();
         LocalDateTime start = end.minusDays(7);
 
-        List<Object[]> rows = orderRepository.topItemsRevenueBetween(start, end);
-        int index = 1;
-        List<Map<String, Object>> result = new ArrayList<>();
+        List<Object[]> rows = transactionRepository.topItemsRevenueBetween(start, end);
 
+        List<Map<String, Object>> result = new ArrayList<>();
+        int index = 1;
         for (Object[] r : rows) {
             Map<String, Object> m = new HashMap<>();
-            m.put("id", index++); // 👈 Thêm ID
-            m.put("name",    (String) r[0]);
-            m.put("orders",  ((Number) r[1]).longValue());
+            m.put("id", index++);
+            m.put("name", (String) r[0]);
+            m.put("orders", ((Number) r[1]).intValue());
             m.put("revenue", ((Number) r[2]).doubleValue());
             result.add(m);
         }
+
         return result;
     }
 
+
+    @Override
     public Map<String, Object> getSummaryReport(int days) {
         LocalDateTime endDate = LocalDateTime.now();
         LocalDateTime startDate = endDate.minusDays(days);
 
-        List<Order> orders = orderRepository.findByCreatedAtBetween(startDate, endDate);
+        List<Transaction> transactions =
+                transactionRepository.findByPaymentStatusAndTransactionTimeBetween(
+                        "SUCCESS", startDate, endDate
+                );
 
-        BigDecimal totalRevenue = orders.stream()
-                .map(Order::getTotalAmount)
-                .filter(Objects::nonNull)
+        BigDecimal totalRevenue = transactions.stream()
+                .map(Transaction::getAmountPaid)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        int totalOrders = orders.size();
+        int totalOrders = transactions.size();
+
         BigDecimal avgOrderValue = totalOrders > 0
                 ? totalRevenue.divide(BigDecimal.valueOf(totalOrders), 2, RoundingMode.HALF_UP)
                 : BigDecimal.ZERO;
 
-        // Số khách hàng (tính distinct theo customer_user_id)
-        long customerVisits = orders.stream()
-                .map(o -> o.getCustomerUser() != null ? o.getCustomerUser().getId() : null)
+        long customerVisits = transactions.stream()
+                .map(t -> t.getOrder().getCustomerUser())
                 .filter(Objects::nonNull)
+                .map(u -> u.getId())
                 .distinct()
                 .count();
 
-        Map<String, Object> summary = new HashMap<>();
-        summary.put("totalRevenue", totalRevenue);
-        summary.put("totalOrders", totalOrders);
-        summary.put("avgOrderValue", avgOrderValue);
-        summary.put("customerVisits", customerVisits);
-        summary.put("days", days);
+        Map<String, Object> map = new HashMap<>();
+        map.put("totalRevenue", totalRevenue);
+        map.put("totalOrders", totalOrders);
+        map.put("avgOrderValue", avgOrderValue);
+        map.put("customerVisits", customerVisits);
+        map.put("days", days);
 
-        return summary;
+        return map;
     }
+
 
     @Override
     public List<Map<String, Object>> getPeakHours(int days) {
@@ -173,16 +186,23 @@ public class ReportServiceImpl implements ReportService {
     // Top khách hàng chi tiêu cao nhất
     @Override
     public List<Map<String, Object>> getTopCustomers(int days) {
-        LocalDateTime endDate = LocalDateTime.now();
-        LocalDateTime startDate = endDate.minusDays(days);
+        LocalDateTime end = LocalDateTime.now();
+        LocalDateTime start = end.minusDays(days);
 
-        List<Order> orders = orderRepository.findByCreatedAtBetween(startDate, endDate);
+        List<Transaction> transactions =
+                transactionRepository.findByPaymentStatusAndTransactionTimeBetween(
+                        "PAID", start, end
+                );
 
         Map<String, BigDecimal> customerRevenue = new HashMap<>();
-        for (Order order : orders) {
-            if (order.getCustomerUser() != null && order.getTotalAmount() != null) {
-                String name = order.getCustomerUser().getUsername();
-                customerRevenue.merge(name, order.getTotalAmount(), BigDecimal::add);
+        Map<String, Long> visitCount = new HashMap<>();
+
+        for (Transaction t : transactions) {
+            if (t.getOrder().getCustomerUser() != null) {
+                String name = t.getOrder().getCustomerUser().getUsername();
+
+                customerRevenue.merge(name, t.getAmountPaid(), BigDecimal::add);
+                visitCount.merge(name, 1L, Long::sum);
             }
         }
 
@@ -190,12 +210,53 @@ public class ReportServiceImpl implements ReportService {
                 .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
                 .limit(5)
                 .map(e -> {
-                    Map<String, Object> map = new HashMap<>();
-                    map.put("name", e.getKey());
-                    map.put("revenue", e.getValue());
-                    return map;
+                    Map<String, Object> m = new HashMap<>();
+                    m.put("name", e.getKey());
+                    m.put("revenue", e.getValue());
+                    m.put("visitCount", visitCount.get(e.getKey()));
+                    return m;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
+
+
+    @Override
+    public List<Map<String, Object>> getRevenueByDays(int days) {
+        LocalDateTime end = LocalDateTime.now();
+        LocalDateTime start = end.minusDays(days - 1)
+                .withHour(0).withMinute(0).withSecond(0).withNano(0);
+
+        List<Object[]> rows = transactionRepository.revenueByDayBetween(start, end);
+
+        return rows.stream().map(r -> {
+            Map<String, Object> m = new HashMap<>();
+            m.put("day", r[0]);
+            m.put("revenue", ((Number) r[1]).doubleValue());
+            m.put("orders", ((Number) r[2]).longValue());
+            return m;
+        }).toList();
+    }
+
+    @Override
+    public List<Map<String, Object>> getTopItemsByDays(int days) {
+        LocalDateTime end = LocalDateTime.now();
+        LocalDateTime start = end.minusDays(days);
+
+        List<Object[]> rows = transactionRepository.topItemsByDays(start, end);
+
+        List<Map<String, Object>> result = new ArrayList<>();
+        int index = 1;
+        for (Object[] r : rows) {
+            Map<String, Object> m = new HashMap<>();
+            m.put("id", index++);
+            m.put("name", (String) r[0]);
+            m.put("orders", ((Number) r[1]).intValue());
+            m.put("revenue", ((Number) r[2]).doubleValue());
+            result.add(m);
+        }
+
+        return result;
+    }
+
 
 }
